--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -59,44 +59,44 @@ jobs:
 
     - name: Build
       id: build
-      run: cmake --build build --target hello
+      run: cmake --build build --target install
         
-    #- name: Cache seed
-    #  id: cache_seed
-    #  uses: actions/cache@v3
-    #  with:
-    #    path: ${{ env.GITHUB_RUN_ID }}_seed
-    #key: seed
+    - name: Cache seed
+      id: cache_seed
+      uses: actions/cache@v3
+      with:
+        path: PR${{ github.event.pull_request.number }}_seed
+        key: seed
         
-    #- name: Generate seed
-    #  if: steps.cache-seed.outputs.cache-hit != 'true'
-    #  run: python -c 'from random import randrange; print(randrange(2**32))' > ${{ env.GITHUB_RUN_ID }}_seed/seed.txt
+    - name: Generate seed
+      if: steps.cache-seed.outputs.cache-hit != 'true'
+      run: python -c 'from random import randrange; print(randrange(2**32))' > PR${{ github.event.pull_request.number }}_seed/seed.txt
 
-    #- name: Obtain seed
-    #  run: |
-    #    seed=`cat ${{ env.GITHUB_RUN_ID }}_seed/seed.txt`
-    #    echo "Using seed $seed"
+    - name: Obtain seed
+      run: |
+        seed=`cat PR${{ github.event.pull_request.number }}_seed/seed.txt`
+        echo "Using seed $seed"
 
     - name: Functional tests (Algorithmic tests)
       if: ${{ always() && steps.build.outcome == 'success' }}
       id: ta_tests
       timeout-minutes: 60
-      run: ./installation/bin/tests --seed=100 --gtest_filter=ta_*  --dataset=tools/testdata/
+      run: ./installation/bin/tests --seed=$seed --gtest_filter=ta_*  --dataset=tools/testdata/
 
     - name: Functional tests (Bad argument tests)
       if: ${{ always() && steps.build.outcome == 'success' }}
       id: tb_tests
       timeout-minutes: 60
-      run: ./installation/bin/tests --seed=100 --gtest_filter=tb_*  --dataset=tools/testdata/
+      run: ./installation/bin/tests --seed=$seed --gtest_filter=tb_*  --dataset=tools/testdata/
 
     - name: Functional tests (Negative tests)
       if: ${{ always() && steps.build.outcome == 'success' }}
       id: tn_tests
       timeout-minutes: 60
-      run: ./installation/bin/tests --seed=100 --gtest_filter=tn_*  --dataset=tools/testdata/
+      run: ./installation/bin/tests --seed=$seed --gtest_filter=tn_*  --dataset=tools/testdata/
 
     - name: Functional tests (Thread tests)
       if: ${{ always() && steps.build.outcome == 'success' }}
       id: tt_tests
       timeout-minutes: 60
-      run: ./installation/bin/tests --seed=100 --gtest_filter=tt_*  --dataset=tools/testdata/
+      run: ./installation/bin/tests --seed=$seed --gtest_filter=tt_*  --dataset=tools/testdata/
