--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -45,12 +45,6 @@ jobs:
         echo "::set-output name=c_comp::clang"
         echo "::set-output name=cpp_comp::clang++"
 
-    - name: run id
-      run: |
-        echo "$GITHUB_REF, $GITHUB_REF_NAME"
-        echo "${{ github.event.pull_request.number }}"
-        echo "${{ github.event.number }}"
-
     - name: Configure cmake
       env:
         CC: ${{steps.setup_clang.outputs.c_comp}}
@@ -61,46 +55,54 @@ jobs:
       id: build
       run: cmake --build build --target install
         
-    - name: Cache seed
-      id: cache_seed
-      uses: actions/cache@v3
+    - name: Download seed
+      id: download_seed
+      continue-on-error: true
+      uses: actions/download-artifact@v3
       with:
-        path: PR${{ github.event.pull_request.number }}_seeds
-        key: ${{ matrix.compiler }}_seed
+        name: PR${{ github.event.pull_request.number }}_${{ runner.os }}_${{ matrix.compiler }}_seed
+        
+    - name: Obtain seed
+      if: ${{ steps.download_seed.outcome == 'success' }}
+      run: |
+          seed=`cat seed.txt`
+          echo "QPL_TESTING_SEED=$seed" >> $GITHUB_ENV
         
     - name: Generate seed
-      if: steps.cache-seed.outputs.cache-hit != 'true'
+      if: ${{ steps.download_seed.outcome != 'success' }}
       run: |
-        mkdir PR${{ github.event.pull_request.number }}_seeds
-        python -c 'from random import randrange; print(randrange(2**32))' > PR${{ github.event.pull_request.number }}_seeds/${{ matrix.compiler }}_seed.txt
-
-    - name: Obtain seed
-      id: obtain_seed
-      run: |
-        seed=`cat PR${{ github.event.pull_request.number }}_seeds/${{ matrix.compiler }}_seed.txt`
-        echo "Using seed $seed"
-        echo "::set-output name=seed::$seed"
+        seed="python -c 'from random import randrange; print(randrange(2**32))'"
+        echo "Generated seed $seed"
+        echo "$seed" > seed.txt
+        echo "QPL_TESTING_SEED=$seed" >> $GITHUB_ENV
+        
+    - name: Upload seed
+      if: ${{ steps.download_seed.outcome != 'success' }}
+      uses: actions/upload-artifact@v3
+      with:
+        name: PR${{ github.event.pull_request.number }}_${{ runner.os }}_${{ matrix.compiler }}_seed
+        path: seed.txt
 
     - name: Functional tests (Algorithmic tests)
-      if: ${{ always() && steps.build.outcome == 'success' && steps.obtain_seed.outcome == 'success' }}
+      if: ${{ always() && steps.build.outcome == 'success' }}
       id: ta_tests
-      timeout-minutes: 60
-      run: ./installation/bin/tests --seed=${{ steps.obtain_seed.outputs.seed }} --gtest_filter=ta_*  --dataset=tools/testdata/
+      timeout-minutes: 90
+      run: ./installation/bin/tests --seed=${{ env.QPL_TESTING_SEED }} --gtest_filter=ta_*  --dataset=tools/testdata/
 
     - name: Functional tests (Bad argument tests)
-      if: ${{ always() && steps.build.outcome == 'success' && steps.obtain_seed.outcome == 'success' }}
+      if: ${{ always() && steps.build.outcome == 'success' }}
       id: tb_tests
-      timeout-minutes: 60
-      run: ./installation/bin/tests --seed=${{ steps.obtain_seed.outputs.seed }} --gtest_filter=tb_*  --dataset=tools/testdata/
+      timeout-minutes: 90
+      run: ./installation/bin/tests --seed=${{ env.QPL_TESTING_SEED }} --gtest_filter=tb_*  --dataset=tools/testdata/
 
     - name: Functional tests (Negative tests)
-      if: ${{ always() && steps.build.outcome == 'success' && steps.obtain_seed.outcome == 'success' }}
+      if: ${{ always() && steps.build.outcome == 'success' }}
       id: tn_tests
-      timeout-minutes: 60
-      run: ./installation/bin/tests --seed=${{ steps.obtain_seed.outputs.seed }} --gtest_filter=tn_*  --dataset=tools/testdata/
+      timeout-minutes: 90
+      run: ./installation/bin/tests --seed=${{ env.QPL_TESTING_SEED }} --gtest_filter=tn_*  --dataset=tools/testdata/
 
     - name: Functional tests (Thread tests)
-      if: ${{ always() && steps.build.outcome == 'success' && steps.obtain_seed.outcome == 'success' }}
+      if: ${{ always() && steps.build.outcome == 'success' }}
       id: tt_tests
-      timeout-minutes: 60
-      run: ./installation/bin/tests --seed=${{ steps.obtain_seed.outputs.seed }} --gtest_filter=tt_*  --dataset=tools/testdata/
+      timeout-minutes: 90
+      run: ./installation/bin/tests --seed=${{ env.QPL_TESTING_SEED }} --gtest_filter=tt_*  --dataset=tools/testdata/
