--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,7 +15,31 @@ env:
   BUILD_TYPE: Release
 
 jobs:
+  Seed:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Check if seed exists
+      id: download_seed
+      continue-on-error: true
+      uses: actions/download-artifact@v3
+      with:
+        name: PR${{ github.event.pull_request.number }}_seed
+        
+    - name: Generate seed
+      if: ${{ steps.download_seed.outcome != 'success' }}
+      run: python -c 'from random import randrange; print(randrange(2**32))' > seed.txt
+        
+    - name: Upload seed
+      if: ${{ steps.download_seed.outcome != 'success' }}
+      uses: actions/upload-artifact@v3
+      with:
+        name: PR${{ github.event.pull_request.number }}_seed
+        path: seed.txt
+
   ci:
+    needs: Seed
+  
     # Latest is >= 20.04 which has required GNU >= 8.2
     runs-on: ubuntu-latest
 
@@ -57,21 +81,9 @@ jobs:
         
     - name: Download seed
       id: download_seed
-      continue-on-error: true
       uses: actions/download-artifact@v3
       with:
-        name: PR${{ github.event.pull_request.number }}_${{ runner.os }}_${{ matrix.compiler }}_seed
-        
-    - name: Generate seed
-      if: ${{ steps.download_seed.outcome != 'success' }}
-      run: python -c 'from random import randrange; print(randrange(2**32))' > seed.txt
-        
-    - name: Upload seed
-      if: ${{ steps.download_seed.outcome != 'success' }}
-      uses: actions/upload-artifact@v3
-      with:
-        name: PR${{ github.event.pull_request.number }}_${{ runner.os }}_${{ matrix.compiler }}_seed
-        path: seed.txt
+        name: PR${{ github.event.pull_request.number }}_seed
         
     - name: Obtain seed
       id: obtain_seed
@@ -81,25 +93,25 @@ jobs:
           echo "::set-output name=seed::$seed"
     
     - name: Functional tests (Algorithmic tests)
-      if: ${{ always() && steps.build.outcome == 'success' }}
+      if: ${{ always() && steps.build.outcome == 'success' && steps.obtain_seed.outcome == 'success' }}
       id: ta_tests
       timeout-minutes: 90
       run: ./installation/bin/tests --seed=${{ steps.obtain_seed.outputs.seed }} --gtest_filter=ta_*  --dataset=tools/testdata/
 
     - name: Functional tests (Bad argument tests)
-      if: ${{ always() && steps.build.outcome == 'success' }}
+      if: ${{ always() && steps.build.outcome == 'success' && steps.obtain_seed.outcome == 'success' }}
       id: tb_tests
       timeout-minutes: 90
       run: ./installation/bin/tests --seed=${{ steps.obtain_seed.outputs.seed }} --gtest_filter=tb_*  --dataset=tools/testdata/
 
     - name: Functional tests (Negative tests)
-      if: ${{ always() && steps.build.outcome == 'success' }}
+      if: ${{ always() && steps.build.outcome == 'success' && steps.obtain_seed.outcome == 'success' }}
       id: tn_tests
       timeout-minutes: 90
       run: ./installation/bin/tests --seed=${{ steps.obtain_seed.outputs.seed }} --gtest_filter=tn_*  --dataset=tools/testdata/
 
     - name: Functional tests (Thread tests)
-      if: ${{ always() && steps.build.outcome == 'success' }}
+      if: ${{ always() && steps.build.outcome == 'success' && steps.obtain_seed.outcome == 'success' }}
       id: tt_tests
       timeout-minutes: 90
       run: ./installation/bin/tests --seed=${{ steps.obtain_seed.outputs.seed }} --gtest_filter=tt_*  --dataset=tools/testdata/
