--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,7 +15,7 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  Seed:
+  seed:
     runs-on: ubuntu-latest
     
     steps:
@@ -38,7 +38,7 @@ jobs:
         path: seed.txt
 
   ci:
-    needs: Seed
+    needs: seed
   
     # Latest is >= 20.04 which has required GNU >= 8.2
     runs-on: ubuntu-latest
