--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,30 +15,49 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  seed:
+  seed_linux:
     runs-on: ubuntu-latest
     
     steps:
     - name: Check if seed exists
-      id: download_seed
-      continue-on-error: true
+      id: cache-seed
+      uses: actions/cache@v3
+      with:
+        path: PR${{ github.event.pull_request.number }}_seed.txt
+        key: seed
+        
+    - name: Generate seed
+      if: ${{ steps.cache-seed.outputs.cache-hit == 'false' }}
+      run: |
+        python -c 'from random import randrange; print(randrange(2**32))' > PR${{ github.event.pull_request.number }}_seed.txt
+        
+    - name: Upload seed
+      if: ${{ steps.cache-seed.outputs.cache-hit == 'false' }}
+      uses: actions/upload-artifact@v3
+      with:
+        name: PR${{ github.event.pull_request.number }}_seed
+        path: PR${{ github.event.pull_request.number }}_seed.txt
+        
+  seed_windows:
+    needs: seed_linux
+    runs-on: windows-latest
+    
+    steps:
+    - name: Check if seed exists
+      id: cache-seed
+      uses: actions/cache@v3
+      with:
+        path: PR${{ github.event.pull_request.number }}_seed.txt
+        key: seed
+        
+    - name: Download seed
+      if: ${{ steps.cache-seed.outputs.cache-hit == 'false' }}
       uses: actions/download-artifact@v3
       with:
         name: PR${{ github.event.pull_request.number }}_seed
         
-    - name: Generate seed
-      if: ${{ steps.download_seed.outcome != 'success' }}
-      run: python -c 'from random import randrange; print(randrange(2**32))' > seed.txt
-        
-    - name: Upload seed
-      if: ${{ steps.download_seed.outcome != 'success' }}
-      uses: actions/upload-artifact@v3
-      with:
-        name: PR${{ github.event.pull_request.number }}_seed
-        path: seed.txt
-
   ci:
-    needs: seed
+    needs: seed_linux
   
     # Latest is >= 20.04 which has required GNU >= 8.2
     runs-on: ubuntu-latest
@@ -79,16 +98,16 @@ jobs:
       id: build
       run: cmake --build build --target install
         
-    - name: Download seed
-      id: download_seed
-      uses: actions/download-artifact@v3
+    - name: Cache seed
+      uses: actions/cache@v3
       with:
-        name: PR${{ github.event.pull_request.number }}_seed
+        path: PR${{ github.event.pull_request.number }}_seed.txt
+        key: seed
         
     - name: Obtain seed
       id: obtain_seed
       run: |
-          seed=`cat seed.txt`
+          seed="cat PR${{ github.event.pull_request.number }}_seed.txt"
           echo "Seed $seed"
           echo "::set-output name=seed::$seed"
     
